# bbk_quant

./: .gitignore  README.md  lib_alpha.py  lib_book.py  lib_data.py  lib_evaluate.py  lib_order.py  lib_risk.py  lib_statistics.py  lib_stock.py  lib_utils.py  main.ipynb  pyproject.toml
